# OTUS_Activities

./: CMakeLists.txt  README.md  ex.cpp
.github/workflows/: home.yml  home_1.yml  home_2.yml  main.yml  release.yml  stan.yml
homework_1/: main.cpp
src/: ip_filter.cpp  main.cpp  testTasks.cpp
